--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    
     <application
+        android:requestLegacyExternalStorage="true"
         android:label="task_hossam"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
@@ -30,4 +32,5 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+    
 </manifest>
