--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: 4.6.5
   dio: 5.2.1+1
+  http: ^1.0.0
   dartz: 0.10.1
   logger: 1.4.0
   font_awesome_flutter: 10.5.0
