--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   dartz: 0.10.1
   logger: 1.4.0
   font_awesome_flutter: 10.5.0
+  hive: 2.2.3
+  path_provider: 2.0.15
   flutter: 
     sdk: flutter
 
